[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.71",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "pypdf>=5.8.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
    "wikipedia>=1.4.0",
]
